# fluxa

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: apple.yml  platform.yml  release.yml
app/: build.gradle.kts  compose-stability.conf  proguard-rules.pro
appleApp/: .gitignore  README.md  project.yml
appleApp/AppleCore/: FluxaAppleAddonCatalogResolver.swift  FluxaAppleAddonConfigurationStore.swift  FluxaAppleAddonResourceLoader.swift  FluxaAppleAddonStoreManager.swift  FluxaAppleAuthStore.swift  FluxaAppleCatalogBootstrap.swift  FluxaAppleCatalogLoader.swift  FluxaAppleHeadlessCoordinator.swift  FluxaAppleHeadlessRuntime.swift  FluxaAppleLibraryStore.swift  FluxaAppleNetGuard.swift  FluxaApplePlatformEffectExecutor.swift  FluxaApplePluginHttpClient.swift  FluxaApplePluginRepositoryManager.swift  FluxaAppleStremioAuthClient.swift
appleApp/Shared/: FluxaRootView.swift  FluxaRustCoreRuntime.swift
appleApp/iOS/: FluxaAppleAddonStoreStartup.swift  FluxaAppleAppRuntime.swift  FluxaAppleAuthStartup.swift  FluxaAppleCalendarStartup.swift  FluxaAppleCatalogBootstrap.swift  FluxaAppleCatalogStartup.swift  FluxaAppleDetailStartup.swift  FluxaAppleDiscoverStartup.swift  FluxaIosApp.swift  (+7 more)
bench/: bench.sh  fluxa_overhead_bench.mjs  run_bench.sh  webtorrent_bench.mjs  webtorrent_serve.mjs
build-logic/: build.gradle.kts
core/: build.gradle.kts
data/: build.gradle.kts
gradle/: libs.versions.toml
player/: build.gradle.kts
player/src/main/cpp/: CMakeLists.txt  fluxa_libass_renderer.cpp
shared/: build.gradle.kts
(+837 files in other folders)
